name:                haskell-openflow
version:             0.0.0.1
synopsis:            OpenFlow protocol
description:         OpenFlow protocol
category:            Network
author:              Brian Brooks
maintainer:          brooks.brian@gmail.com
homepage:            https://github.com/brooksbp/haskell-openflow
bug-reports:         https://github.com/brooksbp/haskell-openflow/issues
license:             BSD3
license-file:        LICENSE
cabal-version:       >= 1.10
build-type:          Simple
extra-source-files:  examples/echo-client.hs
                    ,examples/echo-server.hs
                    ,examples/server.hs

library
  build-depends:     base >= 4 && < 5
                    ,bytestring >= 0.9.2.1
                    ,network >= 2.3.0.10
                    ,network-info >= 0.2.0.3
                    ,cereal >= 0.3.5.2
  exposed-modules:  Network.OpenFlow

source-repository head
  type:             git
  location:         https://github.com/brooksbp/haskell-openflow
