name:                haskell-openflow
category:            Network
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian Brooks
maintainer:          brooks.brian@gmail.com
homepage:            http://github.com/brooksbp/haskell-openflow/
bug-reports:         http://github.com/brooksbp/haskell-openflow/issues
build-type:          Simple
cabal-version:       >= 1.10

synopsis:            OpenFlow protocol support in Haskell
-- description:         

extra-source-files:
  .gitignore
  README.md

source-repository head
  type: git
  location: git://github.com/brooksbp/haskell-openflow.git

library
  exposed-modules:
    Network.MAC
    Network.OpenFlow.Ofp10
    Network.OpenFlow.Ofp13
    Network.OpenFlow.Util

  build-depends:
    base            >= 4.6,
    binary          >= 0.7.2.1,
    bytestring      >= 0.10.4.0

  default-language: Haskell2010

  ghc-options: -Wall -fwarn-tabs -fno-warn-unused-binds -fno-warn-unused-matches -O2 -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: src

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  build-depends:
    base,
    hlint >= 1.7
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
  default-language: Haskell2010

executable example-simple
  main-is: example/simple.hs
  build-depends:
    base,
    haskell-openflow,
    binary           >= 0.7.2.1,
    bytestring       >= 0.10.4.0,
    network          >= 2.6.0.1
  ghc-options: -Wall -O2 -fdicts-cheap -funbox-strict-fields
  default-language: Haskell2010